# spacecraft-dynamics-sim

./: .gitignore  CMakeLists.txt  README.md  bars.cpp  cubesat.cpp  falcon-9.cpp  orbital_cubesat.cpp
dynamics/: CelestialBody.h  Constraint.cpp  Constraint.h  ForceGenerator.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h  Universe.cpp  Universe.h
dynamics/actuators/: ReactionWheel.cpp  ReactionWheel.h  Thruster.cpp  Thruster.h
fsw/: Controllers.cpp  Controllers.h
spacecraft/: Satellite.cpp  Satellite.h
spacecraft/subsystems/: ADCS.cpp  ADCS.h
